# django-supchat

./: LICENSE  MANIFEST.in  README.md  TRADEMARK.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml  tests.yml
supchat/: admin.py  apps.py  conf.py  forms.py  models.py  operator_views.py  permissions.py  services.py  signals.py  sse.py  urls.py  views.py
supchat/migrations/: 0001_initial.py
supchat/static/supchat/: operator.css  operator.js  supchat.css  supchat.js
supchat/templates/supchat/: widget.html
supchat/templates/supchat/operator/: dashboard.html
supchat/templates/supchat/operator/partials/: dashboard_content.html
supchat/templatetags/: supchat.py
tests/: settings.py  test_models.py  test_permissions.py  test_services.py  test_sse.py  test_templatetags.py  urls.py
