[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-supchat"
version = "0.1.0"
description = "A lightweight, secure SSE-powered support chat widget for Django."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [{name = "django-supchat maintainers"}]
keywords = ["django", "chat", "support", "sse", "eventsource"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["Django>=4.2"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-django>=4.8"]

[project.urls]
Homepage = "https://github.com/example/django-supchat"
Documentation = "https://github.com/example/django-supchat#readme"
Issues = "https://github.com/example/django-supchat/issues"

[tool.setuptools.packages.find]
include = ["supchat*"]

[tool.setuptools.package-data]
supchat = [
    "templates/supchat/*.html",
    "static/supchat/*.js",
    "static/supchat/*.css",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]
testpaths = ["tests"]
addopts = "-ra"
