[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-supchat"
version = "1.7.0"
description = "A lightweight, real-time support chat widget for Django powered by SSE"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0"}
authors = [
    {name = "xo-aria", email = "your-email@example.com"}
]
maintainers = [
    {name = "xo-aria", email = "your-email@example.com"}
]
keywords = [
    "django",
    "chat",
    "support",
    "real-time",
    "sse",
    "server-sent-events",
    "widget",
    "customer-support",
    "live-chat",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "factory-boy>=3.3",
]
dev = [
    "django-supchat[test]",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "django-stubs>=4.2",
    "pre-commit>=3.4",
]

[project.urls]
Homepage = "https://github.com/xo-aria/django-supchat"
Documentation = "https://github.com/xo-aria/django-supchat#readme"
Repository = "https://github.com/xo-aria/django-supchat"
Issues = "https://github.com/xo-aria/django-supchat/issues"
Changelog = "https://github.com/xo-aria/django-supchat/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "supchat*"
]

[tool.setuptools.package-data]
supchat = [
    "templates/**/*.html",
    "static/**/*",
    "locale/**/*",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
plugins = ["mypy_django_plugin.main"]
strict = true
